# finops-agent

./: .gitignore  CONTRIBUTING.md  PROJECT_DOCUMENTATION.md  PROJECT_REQUIREMENTS.md  README.md  demo.sh  finops_cli.py  main.py  pyproject.toml
.github/workflows/: ci.yml
