[project]
name = "finops-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai",
    "azure-identity>=1.24.0",
    "azure-mgmt-costmanagement>=4.0.1",
    "azure-mgmt-resource>=24.0.0",
    "azure-mgmt-resourcegraph>=8.0.0",
    "click>=8.2.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.6",
    "python-dotenv>=1.1.1",
    "azure-mgmt-subscription",
    "pydantic",
]
